###### TWE 4.9-1 RELEASED ######
2013-02-21 Sasa Bojanic <sasaboy@together.at>
   # Added more icons that can be used when setting Activity's cutom icon

2013-02-20 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Full support for SHARK STRING VARIABLES

2013-02-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved support for SHARK STRING VARIABLES

2013-02-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: initial support for SHARK STRING VARIABLES

2013-02-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: now validating if variables' InitialValue is referencing DynamicScript variable (it is forbidden)
   # Shark mode: fixed bug in Shark's tooltip manager
   
2013-02-14 Sasa Bojanic <sasaboy@together.at>
   # Now validating variables' InitialValue expressions 
   # Shark mode: now validating variables' InitialValue cross/self/implicit cross references
   # Shark mode: now validating uniqueness of variables considering Shark's system variables and configuration parameters
   
2013-02-13 Sasa Bojanic <sasaboy@together.at>
   # Improved ActualParameters panel
   # Shark mode: support for configuration choice and system variables
   
2013-02-12 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - changed "system" variable naming and validation according to new Shark features (SharkPanelGenerator and SharkXPDLValidator changes)
      - example (shark) XPDLs changed according to the changes made in Shark

2013-02-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - improved Email configuration section (new checkbox to enable/disable configuration - disabling means removing all EAs)
      - Attachments and Attachment names joined into the single control
      - Changed names of the controls
   
###### TWE 4.8-1 RELEASED ######
2013-01-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported CHECK_FOR_COMPLETION extended attribute

2013-01-16 Sasa Bojanic <sasaboy@together.at>