@@ -108,7 +108,7 @@ WORKLOAD_FACTORKey = Workload factor
 XFORMS_FILEKey=XForms file
 CHECK_FOR_FIRST_ACTIVITYKey = Check for first activity
 CHECK_FOR_CONTINUATIONKey = Check for continuation
-CHECK_FOR_COMPLETIONKey = Check for completion
+CHECK_FOR_COMPLETIONKey = Autocomplete when read
 REDIRECT_AFTER_PROCESS_ENDKey = Redirect after process end
 
 EmailConfigurationKey=Email configuration
