@@ -102,7 +102,7 @@
 #Missing translation -> XFORMS_FILEKey=XForms file
 #Missing translation -> CHECK_FOR_FIRST_ACTIVITYKey = Check for first activity
 #Missing translation -> CHECK_FOR_CONTINUATIONKey = Check for continuation
-#Missing translation -> CHECK_FOR_COMPLETIONKey = Check for completion
+#Missing translation -> CHECK_FOR_COMPLETIONKey = Autocomplete when read
 #Missing translation -> REDIRECT_AFTER_PROCESS_ENDKey = Redirect after process end
 
 #Missing translation -> EmailConfigurationKey=Email configuration
